# snakeAIs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  python-tests.yml  stale.yml
snake/: __main__.py  a_star.py  actions.py  bestfs.py  breadthfs.py  constants.py  dfs.py  game_state.py  hill_climbing.py  main.py  main_controller.py  random_agent.py  random_snake.py  snake.py  steepest_ascent_hc.py
snake/configs/: actions.py  colors.py  directions.py  game.py
snake/informed_search_models/: a_star_search.py  best_first_search.py  simple_hill_climbing.py  steepest_ascent_hill_climbing.py  stochastic_hill_climbing.py
snake/main/: controller.py  game.py  manual.py  point.py  state.py
snake/resources/: configs.py  constants.py
snake/search_models/: manual.py
snake/search_models/informed/: a_star_search.py  best_first_search.py  stochastic_hill_climbing.py
snake/search_models/local/: simple_hill_climbing.py  steepest_ascent_hill_climbing.py
snake/search_models/uninformed/: breadth_first_search.py  depth_first_search.py  hamiltonian_cycle.py  random_search.py
snake/tests/: test_pathfinding.py  test_point.py
snake/ui/: __init__.py  game_over.py  menu.py  mode_selection.py  pause_menu.py
snake/uninformed_search_models/: breadth_first_search.py  depth_first_search.py  random_search.py
tests/: test_pathfinding.py
