[tool.poetry]
name = "snakeais"
version = "0.1.0"
description = "SnakeAIs (Snakeyes) is a Python recreation of the classic snake game, using state-space search algorithms to generate optimal paths for collecting food."
authors = ["Megh Khaire <meghkhaire@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.3"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
